; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_apm-emulation.c_queue_get_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_apm-emulation.c_queue_get_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apm_queue = type { i32, i32* }

@APM_MAX_EVENTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.apm_queue*)* @queue_get_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @queue_get_event(%struct.apm_queue* %0) #0 {
  %2 = alloca %struct.apm_queue*, align 8
  store %struct.apm_queue* %0, %struct.apm_queue** %2, align 8
  %3 = load %struct.apm_queue*, %struct.apm_queue** %2, align 8
  %4 = getelementptr inbounds %struct.apm_queue, %struct.apm_queue* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = add nsw i32 %5, 1
  %7 = load i32, i32* @APM_MAX_EVENTS, align 4
  %8 = srem i32 %6, %7
  %9 = load %struct.apm_queue*, %struct.apm_queue** %2, align 8
  %10 = getelementptr inbounds %struct.apm_queue, %struct.apm_queue* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 8
  %11 = load %struct.apm_queue*, %struct.apm_queue** %2, align 8
  %12 = getelementptr inbounds %struct.apm_queue, %struct.apm_queue* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = load %struct.apm_queue*, %struct.apm_queue** %2, align 8
  %15 = getelementptr inbounds %struct.apm_queue, %struct.apm_queue* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %13, i64 %17
  %19 = load i32, i32* %18, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
